[package]
name = "gadget-hack"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
clap = { version = "4.5.17", features = ["cargo"], default-features = true }
gtk4 = { version = "0.9", features = ["v4_12"], default-features = true }
gtk4-layer-shell = "0.4.0"
gtk4-sys = "0.9"
serde_json = "1.0.128"
sysinfo = "0.31.4"
tempfile = "3.12.0"
webkit6 = "0.4"
xmltree = "0.11.0"
zip = "2.2.0"

[patch.crates-io]
xml-rs = { git = "https://github.com/polyfloyd/xml-rs.git", branch = "permit-no-space-between-attrs" }
